is it workin yet?

--- a/interface/client/templates/popupWindows/about.html
+++ b/interface/client/templates/popupWindows/about.html
@@ -8,9 +8,9 @@
             <p>
                 Version {{mist.version}}<br>
                 License {{mist.license}}<br>
-                GitHub <a href="https://github.com/ethereum/mist" target="_blank">github.com/ethereum/mist</a>
+                GitHub <a href="https://github.com/ellaism-io/ellagem" target="_blank">github.com/ellaism-io/ellagem</a>
             </p>
-            <small>Copyright 2016 Ethereum Foundation</small>
+            <small>Copyright 2017 Ellaism.io</small>
         </div>
     </div>
 </template>
