--- a/interface/client/templates/popupWindows/clientUpdateAvailable.html
+++ b/interface/client/templates/popupWindows/clientUpdateAvailable.html
@@ -12,8 +12,8 @@
                 <br>
                     <ul class="no-bullets">
                         <li>{{i18n "mist.popupWindows.updateAvailable.version"}}: <strong> {{version}} </strong></li>
-                        <li>{{i18n "mist.popupWindows.updateAvailable.downloadURL"}}: <strong> {{downloadUrl}}</strong></li>
-                        <li>{{i18n "mist.popupWindows.updateAvailable.checksum"}}: <strong> {{checksum}} </strong></li>
+                        <!-- <li>{{i18n "mist.popupWindows.updateAvailable.downloadURL"}}: <strong> {{downloadUrl}}</strong></li>
+                        <li>{{i18n "mist.popupWindows.updateAvailable.checksum"}}: <strong> {{checksum}} </strong></li> -->
                     </ul>
                 </p>
         </div>
