Branding/Menus/About

--- a/interface/client/templates/popupWindows/about.html
+++ b/interface/client/templates/popupWindows/about.html
@@ -4,11 +4,18 @@
             <img class="left-overlay {{mode}}" src="{{appIconPath}}" style="position: relative;top: -40px;left: -132%;width: 255%;">
         </div>
         <div class="col col-8 ">
-            <h1>{{appName}}</h1>
+            <h1>Ellagem</h1>
             <p>
                 Version {{mist.version}}<br>
                 License {{mist.license}}<br>
                 GitHub <a href="https://github.com/ellaism-io/ellagem" target="_blank">github.com/ellaism-io/ellagem</a>
+            </p>
+            <p>
+              Donate to the project.<br>
+              <a href="https://explorer.ellaism.org/addr/0xc393659c2918a64cdfb44d463de9c747aa4ce3f7" target="_blank">0xc393659c2918a64cdfb44d463de9c747aa4ce3f7</a><br>
+              <a href="https://explorer.ellaism.org/addr/0x00522e276908428C02457d8a8747b9aA0AB52570" target="_blank">0x00522e276908428C02457d8a8747b9aA0AB52570</a><br>
+              <a href="https://explorer.ellaism.org/addr/0x46739B691C011530AAf480AAcd339C206a2046E6" target="_blank">0x46739B691C011530AAf480AAcd339C206a2046E6</a><br>
+
             </p>
             <small>Copyright 2017 Ellaism.io</small>
         </div>
