--- a/interface/client/templates/popupWindows/about.html
+++ b/interface/client/templates/popupWindows/about.html
@@ -17,7 +17,7 @@
               <a href="https://explorer.ellaism.org/addr/0x46739B691C011530AAf480AAcd339C206a2046E6" target="_blank">0x46739B691C011530AAf480AAcd339C206a2046E6</a><br>
 
             </p>
-            <small>Copyright 2017 Ellaism.io</small>
+            <small>Copyright 2017 Ellaism.io/org/com</small>
         </div>
     </div>
 </template>
