--- a/interface/client/templates/popupWindows/onboardingScreen.html
+++ b/interface/client/templates/popupWindows/onboardingScreen.html
@@ -66,7 +66,7 @@
                     {{/if}}
                 </div>
                 <div class="col col-12 footer-buttons">
-                    <button class="goto-start"> {{i18n "buttons.back"}} </button>                
+                    <button class="goto-start"> {{i18n "buttons.back"}} </button>
                     <button class="goto-tutorial-1 right-align"> {{i18n "buttons.next"}} </button>
                 </div>
             </div>
@@ -138,7 +138,7 @@
 
 
 <template name="popupWindows_onboardingScreen_importAccount">
-    <h1>{{i18n "mist.popupWindows.onboarding.doYouHaveAWalletFile"}}</h1>
+    <!-- <h1>{{i18n "mist.popupWindows.onboarding.doYouHaveAWalletFile"}}</h1>
     <div class="col col-6 col-left">
         {{{i18n "mist.popupWindows.onboarding.walletFileDescription"}}}
     </div>
@@ -160,7 +160,7 @@
         </div>
     {{else}}
         <div class="col col-6 dropable"> {{i18n "mist.popupWindows.onboarding.dropFilesHere"}}</div>
-    {{/if}}
+    {{/if}} -->
 </template>
 
 
