--- a/interface/client/templates/popupWindows/coinprice.html
+++ b/interface/client/templates/popupWindows/coinprice.html
@@ -3,7 +3,9 @@
         <div class="col col-4 ">
             <img class="left-overlay {{mode}}" src="{{appIconPath}}" style="position: relative;top: -40px;left: -132%;width: 255%;">
         </div>
-        <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
-        <div class="coinmarketcap-currency-widget" data-currency="ellaism" data-base="USD"  data-secondary="BTC"></div>
+        <div class="col col-8 ">
+          <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
+          <div class="coinmarketcap-currency-widget" data-currency="ellaism" data-base="USD"  data-secondary="BTC"></div>
+        </div>
     </div>
 </template>
