--- a/interface/client/templates/popupWindows/tokens.html
+++ b/interface/client/templates/popupWindows/tokens.html
@@ -1,13 +1,16 @@
 <template name="popupWindows_tokens">
     <div class="row popup-windows tokens">
         <div class="col col-4 ">
-            <img class="left-overlay {{mode}}" src="{{appIconPath}}" style="position: relative;top: -40px;left: -132%;width: 255%;">
+            <img class="left-overlay {{mode}}" src="https://ellaism.io/assets/img/Coin-Stack-PNG-Free-Download.png" style="position: relative;top: -10px;left: -122%;width: 255%;">
         </div>
         <div class="col col-8 ">
             <br>
-            <small>Official tokens on the ella network.</small><br>
-            <small>EFT . 0xc9d07e5e7ade52de25a51982b4b36a0604223fd5</small><br>
-            <small>TRI . 0x5f516f4556589379ebb9ab66460c1b5b577feb5a</small><br>
+            <h1>Official Ella Tokens</h1>
+            Some are for fun, and some serve a purpose.<br>
+            <br>
+            <small>EllaFirstToken - EFT - <a href="https://explorer.ellaism.org/addr/0xc9d07e5e7ade52de25a51982b4b36a0604223fd5" target="_blank">0xc9d07e5e7ade52de25a51982b4b36a0604223fd5</a></small><br>
+            <small>Triforce - TRI - <a href="https://explorer.ellaism.org/addr/0x5f516f4556589379ebb9ab66460c1b5b577feb5a" target="_blank">0x5f516f4556589379ebb9ab66460c1b5b577feb5a</a></small><br>
+            <small>Precious - BLOB - <a href="https://explorer.ellaism.org/addr/0x36453791407fb90655bc974ce1e3e754bf956385" target="_blank">0x36453791407fb90655bc974ce1e3e754bf956385</a></small><br>
         </div>
     </div>
 </template>
