--- a/interface/client/templates/popupWindows/walletsafety.html
+++ b/interface/client/templates/popupWindows/walletsafety.html
@@ -1,11 +1,11 @@
 <template name="popupWindows_walletsafety">
     <div class="row popup-windows walletsafety">
         <div class="col col-4 ">
-            <img class="left-overlay {{mode}}" src="{{appIconPath}}" style="position: relative;top: -40px;left: -132%;width: 255%;">
+            <img class="left-overlay {{mode}}" src="https://ellaism.io/assets/img/PNGPIX-COM-Safe-PNG-Transparent-Image-3.png" style="position: relative;top: -10px;left: -92%;width: 255%;">
         </div>
         <div class="col col-8 ">
             <br>
-            <small>Tips for wallet Safety.</small><br>
+            <h1>Tips for wallet Safety.</h1>
             <small>Always make a backup of the wallet file.</small><br>
             <small>Don't be foolish and think its safe.</small><br>
             <small></small><br>
